src/objects/loan__Automated_Payment_Configuration__c.object
<CustomObject>
    <fields>
        <fullName>loan__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Bank_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Account</label>
        <referenceTo>loan__Bank_Account__c</referenceTo>
        <relationshipLabel>Automated Payment Configuration</relationshipLabel>
        <relationshipName>Automated_Payment_Configuration</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__BatchId__c</fullName>
        <defaultValue>0</defaultValue>
        <label>BatchId(RCC)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Company_Entry_Description__c</fullName>
        <label>Company Entry Description(RCC)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Company_Identification__c</fullName>
        <label>Company Identification(NACHA)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Company_Name__c</fullName>
        <label>Company Name(RCC)</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Event__c</fullName>
        <label>Event</label>
        <picklist>
            <picklistValues>
                <fullName>LOAN PAYMENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LOAN DISBURSAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INVESTOR WITHDRAWAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INVESTOR DEPOSIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INVESTOR PAYMENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FEE PAYMENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BROKER TRANSACTION</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>loan__File_Type__c</fullName>
        <label>File Type</label>
        <picklist>
            <picklistValues>
                <fullName>TEXT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JSON</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XML</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Filegen_Class__c</fullName>
        <label>Filegen Class</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Folder_Name__c</fullName>
        <label>Folder Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Immediate_Destination_Name__c</fullName>
        <label>Immediate Destination Name(NACHA)</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Immediate_Destination__c</fullName>
        <label>Immediate Destination(NACHA)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Immediate_Origin_Name__c</fullName>
        <label>Immediate Origin Name(NACHA)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Immediate_Origin__c</fullName>
        <label>Immediate Origin(NACHA)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Memo__c</fullName>
        <label>Memo(RCC)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Merchant_ID__c</fullName>
        <label>Merchant ID(RCC)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Originating_DFI_Identification__c</fullName>
        <label>Originating DFI Identification(NACHA)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Payment_Mode__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Payment Mode</label>
        <referenceTo>loan__Payment_Mode__c</referenceTo>
        <relationshipLabel>Automated Payment Configuration</relationshipLabel>
        <relationshipName>Automated_Payment_Configuration</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Product_Description__c</fullName>
        <label>Product Description(RCC)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Reference_Code__c</fullName>
        <label>Reference Code(NACHA)</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Support_Phone_Number__c</fullName>
        <label>Support Phone Number(RCC)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Trace_Number_Prefix__c</fullName>
        <label>Trace Number Prefix(NACHA)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Automated Payment Configuration</label>
    <nameField>
        <displayFormat>APC-{0000000000}</displayFormat>
        <label>Automated Payment Configuration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Automated Payment Configuration</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>